# Titanic_analysis

./: README.md  Titanic.ipynb  pyproject.toml
