[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-survival-analysis"
version = "0.1.0"
description = "A Titanic survival analysis project using logistic regression and EDA"
authors = [
    { name="Jeong Hajun", email="chhajun01@naver.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["data-analysis", "titanic", "logistic-regression", "machine-learning"]

[project.dependencies]
pandas = ">=1.3"
scikit-learn = ">=0.24"
imbalanced-learn = ">=0.8"
matplotlib = ">=3.4"
seaborn = ">=0.11"
scipy = ">=1.7"
statsmodels = ">=0.13"

